--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,18 @@
     width: 100%;
   }
 
+  .swiper .card {
+      width: 120px;
+      margin: auto;
+      border: none;
+  }
+
   .story-text {
       background-color: rgba(152, 155, 158, 0.479);
       color: rgb(255, 255, 255);
       width: 80%;
       bottom: 0;
-      left: 4%;
+      left: 10%;
       height: 17px;
       text-align: center;
       margin: 2px 0px 0px 2px ;
